--- a/app/views/comman/_navigation.html.erb
+++ b/app/views/comman/_navigation.html.erb
@@ -7,17 +7,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Project name", "#", class: "navbar-brand" %>
+      <%= link_to "HOME", root_path, class: "navbar-brand" %>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <!-- <li class="active"><a href="#">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <% if current_user %>
+          <li><%= link_to "LogOut", destroy_user_session_path, :method => :delete, class: "glyphicon glyphicon-log-out" %></li>
+        <% else %>
+          <li><%= link_to "SignUp", new_user_registration_path, class: "glyphicon glyphicon-user" %></li>
+          <li><%= link_to "Login", new_user_session_path, class: "glyphicon glyphicon-log-in" %></li>
+          <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
+          <!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+        <% end %>
       </ul>
     </div>
   </div>
