--- a/app/views/comman/_navigation.html.erb
+++ b/app/views/comman/_navigation.html.erb
@@ -17,9 +17,13 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
+          <li><%= link_to "profile", edit_user_registration_path%></li>
           <li><%= link_to "LogOut", destroy_user_session_path, :method => :delete, class: "glyphicon glyphicon-log-out" %></li>
         <% else %>
-          <li><%= link_to "SignUp", new_user_registration_path, class: "glyphicon glyphicon-user" %></li>
+
+          <% if User.count < 1 %>
+            <li><%= link_to "SignUp", new_user_registration_path, class: "glyphicon glyphicon-user" %></li>
+          <% end %>
           <li><%= link_to "Login", new_user_session_path, class: "glyphicon glyphicon-log-in" %></li>
           <!-- <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li> -->
           <!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
