--- a/app/views/passwords/_form.html.erb
+++ b/app/views/passwords/_form.html.erb
@@ -46,9 +46,9 @@
     </div>
   </div>
   <div class="form-group">
-    <%= f.label :notes, :class => 'control-label col-lg-2' %>
+    <%= f.label :additional_information, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :notes, :class => 'form-control' %>
+      <%= f.text_area :notes, :class => 'form-control', :rows => "8" %>
     </div>
   </div>
 
